--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@deno/astro-adapter": "^0.2.0",
     "astro": "^5.1.3",
     "@astrojs/check": "^0.9.4",
     "typescript": "^5.7.3"
