--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/tailwind": "^5.1.4",
     "@deno/astro-adapter": "^0.2.0",
     "astro": "^5.1.3",
     "@astrojs/check": "^0.9.4",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3"
   }
 }
