--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@deno/astro-adapter": "^0.2.0",
     "astro": "^5.1.3",
     "@astrojs/check": "^0.9.4",
+    "astro-navbar": "^2.3.9",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3"
   }
